feat: allow terraform version specification via environment variable

--- a/packages/terraform_install/pyproject.toml
+++ b/packages/terraform_install/pyproject.toml
@@ -12,7 +12,7 @@ packages = [{ include = "terraform_install" }]
 
 [tool.poetry.dependencies]
 python = ">=3.6,<4.0"
-terraform_version = "*"
+terraform_version = { version = "*", optional = true }
 
 [tool.poetry.dev-dependencies]
 
